Added friend alteration
